ingress/ingress-monitoring-frontend.yaml
# ingress-frontend.yaml

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-monitoring-frontend
  namespace: monitoring
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: prometheus.mysite.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: prometheus-operated
                port:
                  number: 9090

    - host: grafana.mysite.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: grafana
                port:
                  number: 80

    - host: alertmanager.mysite.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: alertmanager-main
                port:
                  number: 9093
